password visibility functionality added and bugs fixed

--- a/ppw-client/src/App.css
+++ b/ppw-client/src/App.css
@@ -7,8 +7,8 @@
 }
 
 .toast-msg {
-  @apply text-gray-800 text-lg font-semibold;
+  @apply text-gray-800 text-sm font-semibold;
 }
 .toast-err {
-  @apply text-red-800 text-lg font-semibold;
+  @apply text-red-800 text-sm font-semibold;
 }
